js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/lib1/JsModuleA.1.kt
@file:JsModule("js-module-a")
